# lexiang-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: cli-ci.yml  openclaw-ci.yml  openclaw-release.yml  vscode-ci.yml  vscode-release.yml
crates/lx/: Cargo.toml  build.rs  clippy.toml  rustfmt.toml
crates/lx/src/: config.rs  datadir.rs  json_rpc.rs  main.rs  version.rs
crates/lx/src/auth/: mod.rs
crates/lx/src/cmd/: cli.rs  mod.rs  sh.rs  ui.rs  update.rs  utils.rs
crates/lx/src/cmd/block/: mod.rs
crates/lx/src/cmd/dynamic/: mod.rs
crates/lx/src/cmd/git/: mod.rs  workspace.rs
crates/lx/src/cmd/mcp/: mod.rs
crates/lx/src/cmd/output/: mod.rs
crates/lx/src/cmd/skill/: mod.rs
crates/lx/src/cmd/tools/: mod.rs
crates/lx/src/daemon/: mod.rs  pidfile.rs  service.rs
crates/lx/src/mcp/: caller.rs  client.rs  mod.rs  protocol.rs  transport.rs  upload.rs
crates/lx/src/mcp/schema/: dynamic.rs  embedded.rs  generator.rs  mod.rs  runtime.rs  types.rs
crates/lx/src/serve/: handler.rs  mod.rs  protocol.rs  readmd.md  transport.rs
crates/lx/src/serve/methods/: auth.rs  contact.rs  entry.rs  file.rs  lifecycle.rs  mod.rs  quota.rs  search.rs  space.rs  team.rs
crates/lx/src/service/block/: adapter.rs  converter.rs  document.rs  mod.rs  reader.rs  table.rs  types.rs
crates/lx/src/service/block/ir/: mod.rs
crates/lx/src/service/block/mdx/: emitter.rs  mod.rs  parser.rs
crates/lx/src/shell/: bash.rs  mod.rs
crates/lx/src/shell/commands/: alias.rs  awk.rs  bridge.rs  builtins.rs  cat.rs  cut.rs  find.rs  fzf.rs  grep.rs  head_tail.rs  ls.rs  mod.rs  registry.rs  tr.rs  tree.rs  wc.rs
crates/lx/src/shell/fs/: in_memory.rs  lexiang.rs  mod.rs  mountable.rs  overlay.rs  types.rs  worktree.rs
crates/lx/src/shell/interpreter/: environment.rs  executor.rs  mod.rs
crates/lx/src/shell/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
crates/lx/src/skill/: generator.rs  installer.rs  mod.rs
crates/lx/src/skill/templates/: block_advanced.md
crates/lx/src/update/: checker.rs  mod.rs
crates/lx/src/vfs/: manager.rs  mod.rs  ramdisk.rs
crates/lx/src/worktree/: config.rs  entries.rs  mod.rs  registry.rs  repository.rs  sync.rs
openclaw/: package.json  pnpm-lock.yaml
openspec/: AGENTS.md  project.md
schemas/: lexiang.json
scripts/: install.sh
(+14 files in other folders)
