[workspace]
members = [
    "crates/lx",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "warn"
unused = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
needless_return = "warn"
redundant_closure_for_method_calls = "warn"
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"
dbg_macro = "warn"
print_stdout = "allow"
todo = "warn"
too_many_arguments = "allow"
type_complexity = "allow"
