[package]
name = "lexiang-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tabled = "0.20"
csv = "1"
dirs = "6"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# OAuth 2.0
oauth2 = { version = "4", default-features = false, features = ["rustls-tls"] }
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
warp = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
urlencoding = "2"

# Virtual File System (ramdisk/shm)
sysinfo = "0.33"

# Daemon management
signal-hook = "0.3"

# REPL line editing
rustyline = "15"

# Git worktree support (gitoxide) - cross-platform
gix = { version = "0.81", default-features = false, features = [
    "max-control",
    "worktree-mutation",
    "index",
    "status",
    "blob-diff",
    "revision",
    "sha1",
] }
walkdir = "2"
indicatif = "0.17"
console = "0.15"
async-trait = "0.1"
async-recursion = "1"
inventory = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
anyhow = "1"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
tempfile = "3"

[lints]
workspace = true
